feat: initialise evaluation