@@ -3,27 +3,9 @@ package td.restaurantmanager;
 import java.sql.*;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class DataRetriever {
     private final DBConnection dbConnection = new DBConnection();
-
-    private static String getSql(Integer page, Integer size, boolean hasPagination) {
-        String sql = """
-                SELECT di.id, i.id as id_ingredient, i.name as ingredient_name, i.price, i.category,
-                       di.quantity_required, di.unit, di.id_dish
-                FROM dish_ingredient di
-                right JOIN ingredient i on di.id_ingredient = i.id
-                order by i.id""";
-
-        if (hasPagination) {
-            if (page <= 0 || size <= 0) {
-                throw new IllegalArgumentException("Page and size must be greater than 0");
-            }
-            sql += " LIMIT ? OFFSET ?";
-        }
-        return sql;
-    }
 
     public Dish findDishById(Integer id) {
         if (id == null || id <= 0) {
@@ -34,9 +16,10 @@ public class DataRetriever {
                 SELECT di.id, d.id as id_dish, d.name as dish_name, d.dish_type, d.selling_price,
                        di.id_ingredient, i.name as ingredient_name, i.price, i.category, di.quantity_required, di.unit
                 FROM dish d
-                left JOIN dish_ingredient di ON di.id_dish = d.id
-                left JOIN ingredient i ON di.id_ingredient = i.id
-                WHERE d.id = ?""";
+                LEFT JOIN dish_ingredient di ON di.id_dish = d.id
+                LEFT JOIN ingredient i ON di.id_ingredient = i.id
+                WHERE d.id = ?
+                ORDER BY di.id""";
 
         Connection conn = dbConnection.getDBConnection();
         try {
@@ -49,10 +32,10 @@ public class DataRetriever {
 
             while (rs.next()) {
                 if (dish == null) {
-                    dish = getDishFromDb(rs, dishIngredients);
+                    dish = extractDishFromResultSet(rs);
                 }
                 if (rs.getInt("id_ingredient") > 0) {
-                    dishIngredients.add(getDishIngredientFromDb(rs, dish));
+                    dishIngredients.add(extractDishIngredientFromResultSet(rs, dish));
                 }
             }
 
@@ -60,9 +43,10 @@ public class DataRetriever {
                 throw new RuntimeException("Dish not found: id=" + id);
             }
 
+            dish.setDishIngredients(dishIngredients);
             return dish;
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("Error finding dish by id", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
@@ -71,7 +55,21 @@ public class DataRetriever {
     public List<Ingredient> findIngredients(Integer page, Integer size) {
         boolean hasPagination = (page != null && size != null);
 
-        String sql = getSql(page, size, hasPagination);
+        if (hasPagination && (page <= 0 || size <= 0)) {
+            throw new IllegalArgumentException("Page and size must be greater than 0");
+        }
+
+        String sql = """
+                SELECT i.id as id_ingredient, i.name as ingredient_name, i.price, i.category,
+                       di.id_dish, di.quantity_required, di.unit
+                FROM ingredient i
+                LEFT JOIN dish_ingredient di ON di.id_ingredient = i.id
+                ORDER BY i.id""";
+
+        if (hasPagination) {
+            sql += " LIMIT ? OFFSET ?";
+        }
+
         Connection conn = dbConnection.getDBConnection();
         try {
             PreparedStatement ps = conn.prepareStatement(sql);
@@ -81,14 +79,17 @@ public class DataRetriever {
             }
             ResultSet rs = ps.executeQuery();
 
-            List<Ingredient> ingredientsFromDB = new ArrayList<>();
+            Map<Integer, Ingredient> ingredientMap = new LinkedHashMap<>();
             while (rs.next()) {
-                ingredientsFromDB.add(getIngredientFromDB(rs));
+                Integer ingredientId = rs.getInt("id_ingredient");
+                if (!ingredientMap.containsKey(ingredientId)) {
+                    ingredientMap.put(ingredientId, extractIngredientFromResultSet(rs));
+                }
             }
 
-            return ingredientsFromDB;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
+            return new ArrayList<>(ingredientMap.values());
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding ingredients", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
@@ -96,43 +97,49 @@ public class DataRetriever {
 
     public List<Ingredient> createIngredients(List<Ingredient> newIngredients) {
         if (newIngredients == null || newIngredients.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
-        List<Ingredient> savedIngredients = new ArrayList<>();
         Connection conn = dbConnection.getDBConnection();
         try {
             conn.setAutoCommit(false);
             String insertSql = """
                     INSERT INTO ingredient (id, name, price, category)
                     VALUES (?, ?, ?, ?::ingredient_category)
-                    RETURNING id;""";
+                    RETURNING id, name, price, category""";
+
+            List<Ingredient> savedIngredients = new ArrayList<>();
 
             try (PreparedStatement ps = conn.prepareStatement(insertSql)) {
                 for (Ingredient newIngredient : newIngredients) {
-                    buildIngredientStatement(newIngredient, ps);
+                    int nextId = nextId(conn, "ingredient");
+
+                    ps.setInt(1, nextId);
+                    ps.setString(2, newIngredient.getName());
+                    ps.setDouble(3, newIngredient.getPrice());
+                    ps.setString(4, newIngredient.getCategory().name());
 
                     try (ResultSet rs = ps.executeQuery()) {
-                        rs.next();
-                        savedIngredients.add(
-                                new Ingredient(
-                                        rs.getInt("id"),
-                                        newIngredient.getName(),
-                                        newIngredient.getPrice(),
-                                        newIngredient.getCategory()
-                                )
-                        );
+                        if (rs.next()) {
+                            savedIngredients.add(new Ingredient(
+                                    rs.getInt("id"),
+                                    rs.getString("name"),
+                                    rs.getDouble("price"),
+                                    CategoryEnum.valueOf(rs.getString("category"))
+                            ));
+                        }
                     }
                 }
-
                 conn.commit();
                 return savedIngredients;
-            } catch (SQLException e) {
-                conn.rollback();
-                throw new RuntimeException(e);
             }
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            try {
+                conn.rollback();
+            } catch (SQLException ex) {
+                // Ignore rollback exception
+            }
+            throw new RuntimeException("Error creating ingredients", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
@@ -143,40 +150,12 @@ public class DataRetriever {
             throw new IllegalArgumentException("Dish cannot be null");
         }
 
-        String upsertDishSql = """
-                INSERT INTO dish (id, selling_price, name, dish_type)
-                VALUES (?, ?, ?, ?::dish_type)
-                ON CONFLICT (id) DO UPDATE
-                SET name = EXCLUDED.name,
-                    selling_price = EXCLUDED.selling_price,
-                    dish_type = EXCLUDED.dish_type
-                RETURNING id""";
-
         Connection conn = dbConnection.getDBConnection();
         try {
             conn.setAutoCommit(false);
-            Integer dishId;
 
-            try (PreparedStatement ps = conn.prepareStatement(upsertDishSql)) {
-                if (dishToSave.getId() != null) {
-                    ps.setInt(1, dishToSave.getId());
-                } else {
-                    ps.setInt(1, next_id("dish"));
-                }
-
-                ps.setObject(2, dishToSave.getSellingPrice(), Types.DOUBLE);
-                ps.setString(3, dishToSave.getName());
-                ps.setString(4, dishToSave.getDishType().name());
-
-                try (ResultSet rs = ps.executeQuery()) {
-                    rs.next();
-                    dishId = rs.getInt(1);
-                }
-            }
-
-            List<DishIngredient> dishIngredients = dishToSave.getDishIngredients();
-
-            manageDishIngredients(conn, dishId, dishIngredients);
+            Integer dishId = upsertDish(conn, dishToSave);
+            updateDishIngredients(conn, dishId, dishToSave.getDishIngredients());
 
             conn.commit();
             return findDishById(dishId);
@@ -184,9 +163,339 @@ public class DataRetriever {
             try {
                 conn.rollback();
             } catch (SQLException ex) {
-                e.addSuppressed(ex);
+                // Ignore rollback exception
             }
-            throw new RuntimeException(e);
+            throw new RuntimeException("Error saving dish", e);
+        } finally {
+            dbConnection.closeDBConnection(conn);
+        }
+    }
+
+    private Integer upsertDish(Connection conn, Dish dish) throws SQLException {
+        String sql = """
+                INSERT INTO dish (id, name, dish_type, selling_price)
+                VALUES (?, ?, ?::dish_type, ?)
+                ON CONFLICT (id) DO UPDATE SET
+                    name = EXCLUDED.name,
+                    dish_type = EXCLUDED.dish_type,
+                    selling_price = EXCLUDED.selling_price
+                RETURNING id""";
+
+        try (PreparedStatement ps = conn.prepareStatement(sql)) {
+            Integer dishId = dish.getId();
+            if (dishId == null || dishId <= 0) {
+                dishId = nextId(conn, "dish");
+            }
+
+            ps.setInt(1, dishId);
+            ps.setString(2, dish.getName());
+            ps.setString(3, dish.getDishType().name());
+            ps.setDouble(4, dish.getSellingPrice());
+
+            try (ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) {
+                    return rs.getInt("id");
+                } else {
+                    throw new SQLException("Failed to upsert dish");
+                }
+            }
+        }
+    }
+
+    private void updateDishIngredients(Connection conn, Integer dishId, List<DishIngredient> dishIngredients)
+            throws SQLException {
+        if (dishId == null) {
+            throw new IllegalArgumentException("Dish ID cannot be null");
+        }
+
+        // Delete existing dish ingredients
+        String deleteSql = "DELETE FROM dish_ingredient WHERE id_dish = ?";
+        try (PreparedStatement ps = conn.prepareStatement(deleteSql)) {
+            ps.setInt(1, dishId);
+            ps.executeUpdate();
+        }
+
+        // Insert new dish ingredients if provided
+        if (dishIngredients != null && !dishIngredients.isEmpty()) {
+            String insertSql = """
+                    INSERT INTO dish_ingredient (id, id_dish, id_ingredient, quantity_required, unit)
+                    VALUES (?, ?, ?, ?, ?::unit_type)""";
+
+            try (PreparedStatement ps = conn.prepareStatement(insertSql)) {
+                int nextId = nextId(conn, "dish_ingredient");
+
+                for (DishIngredient di : dishIngredients) {
+                    // Ensure ingredient exists
+                    ensureIngredientExists(conn, di.getIngredient());
+
+                    ps.setInt(1, nextId++);
+                    ps.setInt(2, dishId);
+                    ps.setInt(3, di.getIngredient().getId());
+                    ps.setDouble(4, di.getQuantityRequired());
+                    ps.setString(5, di.getUnit().name());
+                    ps.addBatch();
+                }
+                ps.executeBatch();
+            }
+        }
+    }
+
+    private void ensureIngredientExists(Connection conn, Ingredient ingredient) throws SQLException {
+        if (ingredient.getId() == null || !ingredientExists(conn, ingredient.getId())) {
+            saveIngredientInternal(conn, ingredient);
+        }
+    }
+
+    private boolean ingredientExists(Connection conn, Integer ingredientId) throws SQLException {
+        String sql = "SELECT 1 FROM ingredient WHERE id = ?";
+        try (PreparedStatement ps = conn.prepareStatement(sql)) {
+            ps.setInt(1, ingredientId);
+            try (ResultSet rs = ps.executeQuery()) {
+                return rs.next();
+            }
+        }
+    }
+
+    public Order saveOrder(Order orderToSave) {
+        if (orderToSave == null) {
+            throw new IllegalArgumentException("Order cannot be null");
+        }
+
+        Connection conn = dbConnection.getDBConnection();
+        try {
+            conn.setAutoCommit(false);
+
+            // Check stock availability
+            checkStockAvailability(orderToSave);
+
+            // Save order
+            Integer orderId = upsertOrder(conn, orderToSave);
+
+            // Update dish orders
+            updateDishOrders(conn, orderId, orderToSave.getDishOrders());
+
+            // Deduct stock
+            deductStockForOrder(conn, orderToSave.getDishOrders());
+
+            conn.commit();
+            return findOrderById(orderId);
+        } catch (Exception e) {
+            try {
+                conn.rollback();
+            } catch (SQLException ex) {
+                // Ignore rollback exception
+            }
+            throw new RuntimeException("Failed to save order", e);
+        } finally {
+            dbConnection.closeDBConnection(conn);
+        }
+    }
+
+    private Integer upsertOrder(Connection conn, Order order) throws SQLException {
+        String sql = """
+                INSERT INTO "order" (id, reference, creation_datetime)
+                VALUES (?, ?, ?)
+                ON CONFLICT (id) DO UPDATE SET
+                    reference = EXCLUDED.reference,
+                    creation_datetime = EXCLUDED.creation_datetime
+                RETURNING id""";
+
+        try (PreparedStatement ps = conn.prepareStatement(sql)) {
+            Integer orderId = order.getId();
+            if (orderId == null || orderId <= 0) {
+                orderId = nextId(conn, "order");
+            }
+
+            String reference = order.getReference();
+            if (reference == null || reference.trim().isEmpty()) {
+                reference = generateOrderReference(conn);
+            }
+
+            Instant creationDatetime = order.getCreationDatetime();
+            if (creationDatetime == null) {
+                creationDatetime = Instant.now();
+            }
+
+            ps.setInt(1, orderId);
+            ps.setString(2, reference);
+            ps.setTimestamp(3, Timestamp.from(creationDatetime));
+
+            try (ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) {
+                    return rs.getInt("id");
+                } else {
+                    throw new SQLException("Failed to upsert order");
+                }
+            }
+        }
+    }
+
+    private void updateDishOrders(Connection conn, Integer orderId, List<DishOrder> dishOrders)
+            throws SQLException {
+        if (orderId == null) {
+            throw new IllegalArgumentException("Order ID cannot be null");
+        }
+
+        // Delete existing dish orders
+        String deleteSql = "DELETE FROM dish_order WHERE id_order = ?";
+        try (PreparedStatement ps = conn.prepareStatement(deleteSql)) {
+            ps.setInt(1, orderId);
+            ps.executeUpdate();
+        }
+
+        // Insert new dish orders if provided
+        if (dishOrders != null && !dishOrders.isEmpty()) {
+            String insertSql = """
+                    INSERT INTO dish_order (id, id_order, id_dish, quantity)
+                    VALUES (?, ?, ?, ?)""";
+
+            try (PreparedStatement ps = conn.prepareStatement(insertSql)) {
+                int nextId = nextId(conn, "dish_order");
+
+                for (DishOrder dishOrder : dishOrders) {
+                    ps.setInt(1, nextId++);
+                    ps.setInt(2, orderId);
+                    ps.setInt(3, dishOrder.getDish().getId());
+                    ps.setInt(4, dishOrder.getQuantity());
+                    ps.addBatch();
+                }
+                ps.executeBatch();
+            }
+        }
+    }
+
+    private void checkStockAvailability(Order order) {
+        if (order.getDishOrders() == null || order.getDishOrders().isEmpty()) {
+            return;
+        }
+
+        for (DishOrder dishOrder : order.getDishOrders()) {
+            Dish dish = findDishById(dishOrder.getDish().getId());
+
+            if (dish.getDishIngredients() != null) {
+                for (DishIngredient dishIngredient : dish.getDishIngredients()) {
+                    double requiredQuantity = dishIngredient.getQuantityRequired() * dishOrder.getQuantity();
+                    double availableQuantity = calculateAvailableStock(dishIngredient.getIngredient().getId());
+
+                    if (availableQuantity < requiredQuantity) {
+                        throw new IllegalArgumentException(
+                                String.format("Insufficient stock for ingredient '%s'. Required: %.2f, Available: %.2f",
+                                        dishIngredient.getIngredient().getName(),
+                                        requiredQuantity,
+                                        availableQuantity)
+                        );
+                    }
+                }
+            }
+        }
+    }
+
+    private double calculateAvailableStock(Integer ingredientId) {
+        List<StockMovement> movements = getIngredientStockMovements(ingredientId);
+        double total = 0.0;
+
+        for (StockMovement movement : movements) {
+            if (movement.getType() == MovementTypeEnum.IN) {
+                total += movement.getValue().getQuantity();
+            } else if (movement.getType() == MovementTypeEnum.OUT) {
+                total -= movement.getValue().getQuantity();
+            }
+        }
+
+        return total;
+    }
+
+    private void deductStockForOrder(Connection conn, List<DishOrder> dishOrders) throws SQLException {
+        if (dishOrders == null || dishOrders.isEmpty()) {
+            return;
+        }
+
+        String insertSql = """
+                INSERT INTO stock_movement (id, id_ingredient, quantity, unit, type, creation_datetime)
+                VALUES (?, ?, ?, ?::unit_type, ?::movement_type, ?)""";
+
+        try (PreparedStatement ps = conn.prepareStatement(insertSql)) {
+            int nextMovementId = nextId(conn, "stock_movement");
+
+            for (DishOrder dishOrder : dishOrders) {
+                Dish dish = findDishById(dishOrder.getDish().getId());
+
+                if (dish.getDishIngredients() != null) {
+                    for (DishIngredient dishIngredient : dish.getDishIngredients()) {
+                        double quantityToDeduct = dishIngredient.getQuantityRequired() * dishOrder.getQuantity();
+
+                        ps.setInt(1, nextMovementId++);
+                        ps.setInt(2, dishIngredient.getIngredient().getId());
+                        ps.setDouble(3, quantityToDeduct);
+                        ps.setString(4, dishIngredient.getUnit().name());
+                        ps.setString(5, MovementTypeEnum.OUT.name());
+                        ps.setTimestamp(6, Timestamp.from(Instant.now()));
+                        ps.addBatch();
+                    }
+                }
+            }
+            ps.executeBatch();
+        }
+    }
+
+    public Order findOrderById(Integer orderId) {
+        if (orderId == null || orderId <= 0) {
+            throw new IllegalArgumentException("Order ID must be positive");
+        }
+
+        String sql = """
+                SELECT o.id, o.reference, o.creation_datetime,
+                       d_o.id as dish_order_id, d_o.id_dish, d_o.quantity,
+                       d.name as dish_name, d.dish_type, d.selling_price
+                FROM "order" o
+                LEFT JOIN dish_order d_o ON o.id = d_o.id_order
+                LEFT JOIN dish d ON d_o.id_dish = d.id
+                WHERE o.id = ?
+                ORDER BY d_o.id""";
+
+        Connection conn = dbConnection.getDBConnection();
+        try {
+            PreparedStatement ps = conn.prepareStatement(sql);
+            ps.setInt(1, orderId);
+            ResultSet rs = ps.executeQuery();
+
+            Order order = null;
+            List<DishOrder> dishOrders = new ArrayList<>();
+
+            while (rs.next()) {
+                if (order == null) {
+                    order = new Order(
+                            rs.getInt("id"),
+                            rs.getString("reference"),
+                            rs.getTimestamp("creation_datetime").toInstant(),
+                            dishOrders
+                    );
+                }
+
+                if (rs.getObject("id_dish") != null) {
+                    Dish dish = new Dish(
+                            rs.getInt("id_dish"),
+                            rs.getString("dish_name"),
+                            DishTypeEnum.valueOf(rs.getString("dish_type")),
+                            rs.getDouble("selling_price"),
+                            null  // We don't load ingredients here
+                    );
+
+                    dishOrders.add(new DishOrder(
+                            rs.getInt("dish_order_id"),
+                            dish,
+                            rs.getInt("quantity")
+                    ));
+                }
+            }
+
+            if (order == null) {
+                throw new RuntimeException("Order not found with id: " + orderId);
+            }
+
+            return order;
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding order by id", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
@@ -194,67 +503,95 @@ public class DataRetriever {
 
     public List<Dish> findDishByIngredientsName(String ingredientsName) {
         if (ingredientsName == null || ingredientsName.trim().isEmpty()) {
-            throw new IllegalArgumentException("ingredientsName is null or empty");
+            throw new IllegalArgumentException("ingredientsName cannot be null or empty");
         }
+
         String sql = """
-                select di.id, dish.id as id_dish, dish.name as dish_name, dish.dish_type, dish.selling_price,
-                       di.id_ingredient, i.name as ingredient_name, i.price, i.category, di.quantity_required, di.unit
-                from dish
-                left join dish_ingredient di on di.id_dish = dish.id
-                left join ingredient i on di.id_ingredient = i.id
-                where i.name ilike ?
-                order by dish.id;""";
+                SELECT DISTINCT d.id as id_dish, d.name as dish_name, d.dish_type, d.selling_price
+                FROM dish d
+                JOIN dish_ingredient di ON d.id = di.id_dish
+                JOIN ingredient i ON di.id_ingredient = i.id
+                WHERE i.name ILIKE ?
+                ORDER BY d.id""";
 
         Connection conn = dbConnection.getDBConnection();
         try {
             PreparedStatement ps = conn.prepareStatement(sql);
-            ps.setString(1, "%" + ingredientsName + "%");
+            ps.setString(1, "%" + ingredientsName.trim() + "%");
             ResultSet rs = ps.executeQuery();
 
-            List<Dish> dishFromDatabase = new ArrayList<>();
-            List<DishIngredient> dishIngredients = new ArrayList<>();
-            Dish dish = null;
+            List<Dish> dishes = new ArrayList<>();
             while (rs.next()) {
-                if (dish == null) {
-                    dish = getDishFromDb(rs, dishIngredients);
-                }
-                dishIngredients.add(getDishIngredientFromDb(rs, dish));
-                dishFromDatabase.add(dish);
+                dishes.add(extractDishFromResultSet(rs));
             }
 
-            return dishFromDatabase;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
+            return dishes;
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding dishes by ingredient name", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
     }
 
-    public List<Ingredient> findIngredientsByCriteria(String ingredientName, CategoryEnum category, String dishName, int page, int size) {
-        if (page <= 0 || size <= 0) {
-            throw new IllegalArgumentException("page or size equal zero");
+    public List<Ingredient> findIngredientsByCriteria(String ingredientName, CategoryEnum category,
+                                                      String dishName, Integer page, Integer size) {
+        if (page != null && page <= 0) {
+            throw new IllegalArgumentException("Page must be greater than 0");
         }
+        if (size != null && size <= 0) {
+            throw new IllegalArgumentException("Size must be greater than 0");
+        }
+
         StringBuilder sql = new StringBuilder("""
-                select i.id as id_ingredient, i.name as ingredient_name, i.price, i.category,
-                    di.id_dish, di.quantity_required, di.unit
-                from ingredient i
-                left join dish_ingredient di on i.id = di.id_ingredient
-                left join dish d on d.id = di.id_dish
-                where 1 = 1""");
+                SELECT DISTINCT i.id as id_ingredient, i.name as ingredient_name, i.price, i.category
+                FROM ingredient i
+                LEFT JOIN dish_ingredient di ON i.id = di.id_ingredient
+                LEFT JOIN dish d ON di.id_dish = d.id
+                WHERE 1 = 1""");
+
+        List<Object> parameters = new ArrayList<>();
+
+        if (ingredientName != null && !ingredientName.trim().isEmpty()) {
+            sql.append(" AND i.name ILIKE ?");
+            parameters.add("%" + ingredientName.trim() + "%");
+        }
+
+        if (category != null) {
+            sql.append(" AND i.category = ?::ingredient_category");
+            parameters.add(category.name());
+        }
+
+        if (dishName != null && !dishName.trim().isEmpty()) {
+            sql.append(" AND d.name ILIKE ?");
+            parameters.add("%" + dishName.trim() + "%");
+        }
+
+        sql.append(" ORDER BY i.id");
+
+        if (page != null && size != null) {
+            sql.append(" LIMIT ? OFFSET ?");
+            parameters.add(size);
+            parameters.add((page - 1) * size);
+        }
 
         Connection conn = dbConnection.getDBConnection();
         try {
-            PreparedStatement ps = buildIngredientsSearchStatement(sql, ingredientName, category, dishName, conn, page, size);
-            ResultSet rs = ps.executeQuery();
+            PreparedStatement ps = conn.prepareStatement(sql.toString());
 
-            List<Ingredient> ingredientsByCriteria = new ArrayList<>();
-            while (rs.next()) {
-                ingredientsByCriteria.add(getIngredientFromDB(rs));
+            for (int i = 0; i < parameters.size(); i++) {
+                ps.setObject(i + 1, parameters.get(i));
             }
 
-            return ingredientsByCriteria;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
+            ResultSet rs = ps.executeQuery();
+
+            List<Ingredient> ingredients = new ArrayList<>();
+            while (rs.next()) {
+                ingredients.add(extractIngredientFromResultSet(rs));
+            }
+
+            return ingredients;
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding ingredients by criteria", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
@@ -262,623 +599,104 @@ public class DataRetriever {
 
     public Ingredient saveIngredient(Ingredient ingredientToSave) {
         if (ingredientToSave == null) {
-            throw new IllegalArgumentException("ingredientToSave is null");
+            throw new IllegalArgumentException("Ingredient cannot be null");
         }
 
-        String sql = """
-                insert into ingredient (id, name, price, category)
-                values (?, ? ,?, ?::ingredient_category)
-                on conflict (id) do update
-                set name = EXCLUDED.name,
-                    price = EXCLUDED.price,
-                    category = EXCLUDED.category
-                returning id;""";
         Connection conn = dbConnection.getDBConnection();
-
         try {
             conn.setAutoCommit(false);
-            Integer ingredientId;
 
-            try (PreparedStatement ps = conn.prepareStatement(sql)) {
-                ps.setInt(1, ingredientToSave.getId());
-                ps.setString(2, ingredientToSave.getName());
-                if (ingredientToSave.getPrice() != null) {
-                    ps.setDouble(3, ingredientToSave.getPrice());
-                } else {
-                    ps.setNull(3, Types.DOUBLE);
-                }
-                if (ingredientToSave.getCategory() != null) {
-                    ps.setString(4, ingredientToSave.getCategory().name());
-                } else {
-                    ps.setNull(4, Types.VARCHAR);
-                }
+            Ingredient savedIngredient = saveIngredientInternal(conn, ingredientToSave);
 
-                try (ResultSet rs = ps.executeQuery()) {
-                    rs.next();
-                    ingredientId = rs.getInt(1);
-                }
-
-                List<StockMovement> stockMovementList = ingredientToSave.getStockMovementList();
-
-                if (stockMovementList != null && !stockMovementList.isEmpty()) {
-                    addStockMovements(conn, ingredientId, stockMovementList);
-                }
-
-                conn.commit();
-                return new Ingredient(
-                        ingredientId,
-                        ingredientToSave.getName(),
-                        ingredientToSave.getPrice(),
-                        ingredientToSave.getCategory(),
-                        getIngredientStockMovements(ingredientId)
-                );
-            } catch (SQLException e) {
-                conn.rollback();
-                throw new RuntimeException(e);
+            // Save stock movements if provided
+            if (ingredientToSave.getStockMovementList() != null &&
+                !ingredientToSave.getStockMovementList().isEmpty()) {
+                saveStockMovements(conn, savedIngredient.getId(), ingredientToSave.getStockMovementList());
             }
+
+            conn.commit();
+            return findIngredientById(savedIngredient.getId());
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            try {
+                conn.rollback();
+            } catch (SQLException ex) {
+                // Ignore rollback exception
+            }
+            throw new RuntimeException("Error saving ingredient", e);
         } finally {
             dbConnection.closeDBConnection(conn);
         }
     }
 
-//    public Dish saveDish(Dish dishToSave) {
-//        if (dishToSave == null) {
-//            throw new IllegalArgumentException("Dish cannot be null");
-//        }
-//        String upsertDishSql = """
-//                INSERT INTO dish (id, selling_price, name, dish_type)
-//                VALUES (?, ?, ?, ?::dish_type)
-//                ON CONFLICT (id) DO UPDATE
-//                SET name = EXCLUDED.name,
-//                    selling_price = EXCLUDED.selling_price,
-//                    dish_type = EXCLUDED.dish_type
-//                RETURNING id""";
-//
-//        Connection conn = dbConnection.getDBConnection();
-//        try {
-//            conn.setAutoCommit(false);
-//            Integer dishId;
-//
-//            try (PreparedStatement ps = conn.prepareStatement(upsertDishSql)) {
-//                if (dishToSave.getId() != null) {
-//                    ps.setInt(1, dishToSave.getId());
-//                } else {
-//                    ps.setInt(1, next_id("dish"));
-//                }
-//                if (dishToSave.getSellingPrice() != null) {
-//                    ps.setDouble(2, dishToSave.getSellingPrice());
-//                } else {
-//                    ps.setNull(2, Types.DOUBLE);
-//                }
-//
-//                ps.setString(3, dishToSave.getName());
-//                ps.setString(4, dishToSave.getDishType().name());
-//
-//                try (ResultSet rs = ps.executeQuery()) {
-//                    rs.next();
-//                    dishId = rs.getInt(1);
-//                }
-//            }
-//
-//            List<DishIngredient> newDishIngredients = dishToSave.getDishIngredients();
-//
-//            detachIngredients(conn, dishId, newDishIngredients);
-//            attachIngredients(conn, dishId, newDishIngredients);
-//
-//            conn.commit();
-//            return findDishById(dishId);
-//        } catch (SQLException e) {
-//            try {
-//                conn.rollback();
-//            } catch (SQLException ex) {
-//                e.addSuppressed(ex);
-//            }
-//            throw new RuntimeException(e);
-//        } finally {
-//            dbConnection.closeDBConnection(conn);
-//        }
-//    }
-
-    //    public Ingredient saveIngredient(Ingredient ingredientTosave) {
-//        Connection conn = dbConnection.getDBConnection()
-//        try {
-//            PreparedStatement ps = conn.prepareStatement("""
-//                    INSERT INTO ingredient (id, name, price, category)
-//                    VALUES (?, ?, ?, ?)
-//                    ON conflict do nothing""");
-//
-//            ps.setInt(1, ingredientTosave.getId());
-//            ps.setString(2, ingredientTosave.getName());
-//            ps.setDouble(3, ingredientTosave.getPrice());
-//            ps.setString(4, ingredientTosave.getCategory().toString());
-//            ResultSet rs = ps.executeQuery();
-//
-//            Ingredient ingredient = getIngredients(rs).get(0);
-//            insertIntoStockMovement(ingredient);
-//            return ingredient;
-//        } catch (SQLException e) {
-//            throw new RuntimeException(e);
-//        } finally {
-//            dbConnection.closeDBConnection(conn);
-//        }
-//    }
-//
-//    private StockMovement insertIntoStockMovement(Ingredient ingredient) {
-//        Connection conn = dbConnection.getDBConnection();
-//        try {
-//            PreparedStatement ps = conn.prepareStatement("""
-//                    insert into stock_movement (id, id_ingredient, quantity, unit, creation_datetime)
-//                    values (?, ?, ?::movement_type, ?::unit_type, ?)
-//                    on conflict (id) do update
-//                    set id_ingredient = excluded.id_ingredient,
-//                        quantity = excluded.quantity,
-//                        unit = excluded.unit,
-//                        creation_datetime = excluded.creation_datetime
-//                    returning id, id_ingredient, quantity, unit, creation_datetime;""");
-//
-//            ResultSet rs = ps.executeQuery();
-//            if (rs.next()) {
-//                return new StockMovement(
-//                        rs.getInt("id"),
-//                        ingredient,
-//                        UnitType.valueOf(rs.getString("type")),
-//                        rs.getObject("quantity") == null ? null : rs.getDouble("quantity"),
-//                        Instant.parse(rs.getString("creation_datetime"))
-//                );
-//            }
-//        } catch (SQLException e) {
-//            throw new RuntimeException(e);
-//        } finally {
-//            dbConnection.closeDBConnection(conn);
-//        }
-//    }
-//
-//    public StockValue getStockValueAt(Instant instant) {
-//        return null;
-//    }
-//
-
-    private Ingredient getIngredientFromDB(ResultSet rs) throws SQLException {
-        return new Ingredient(
-                rs.getInt("id_ingredient"),
-                rs.getString("ingredient_name"),
-                getNullableDouble(rs, "price"),
-                CategoryEnum.valueOf(rs.getString("category")),
-                getIngredientStockMovements(rs.getInt("id_ingredient"))
-        );
-    }
-
-    private PreparedStatement buildIngredientsSearchStatement(
-            StringBuilder sql,
-            String ingredientName,
-            CategoryEnum category,
-            String dishName,
-            Connection conn,
-            int page,
-            int size) throws SQLException {
-
-        List<Object> params = new ArrayList<>();
-
-        if (ingredientName != null) {
-            sql.append(" AND i.name ILIKE ?");
-            params.add("%" + ingredientName.trim() + "%");
-        }
-
-        if (category != null) {
-            sql.append(" AND i.category::varchar(20) ILIKE ?");
-            params.add("%" + category.name() + "%");
-        }
-
-        if (dishName != null) {
-            sql.append(" AND d.name ILIKE ?");
-            params.add("%" + dishName.trim() + "%");
-        }
-
-        sql.append(" ORDER BY i.id LIMIT ? OFFSET ?");
-        PreparedStatement ps = conn.prepareStatement(sql.toString());
-
-        int index = 1;
-        for (Object param : params) {
-            ps.setObject(index++, param);
-        }
-
-        ps.setInt(index++, size);
-        ps.setInt(index, (page - 1) * size);
-
-        return ps;
-    }
-
-//    private void detachIngredients(Connection conn, Integer dishId, List<DishIngredient> ingredientsToSave)
-//            throws SQLException {
-//
-//        if (ingredientsToSave == null || ingredientsToSave.isEmpty()) {
-//            return;
-//        }
-//
-//        List<Ingredient> ingredients = ingredientsToSave
-//                .stream()
-//                .map(DishIngredient::getIngredient)
-//                .toList();
-//
-//        String baseSql = "DELETE FROM dish_ingredient WHERE id_dish = ?";
-//
-//        if (!ingredientsToSave.isEmpty()) {
-//            baseSql += " AND id_ingredient NOT IN (%s) ";
-//
-//            String inClause = ingredients.stream()
-//                    .map(x -> "?")
-//                    .collect(Collectors.joining(","));
-//
-//            baseSql = String.format(baseSql, inClause);
-//        }
-//
-//        try (PreparedStatement ps = conn.prepareStatement(baseSql)) {
-//            ps.setInt(1, dishId);
-//            int paramIndex = 2;
-//
-//            if (!ingredientsToSave.isEmpty()) {
-//                for (Ingredient ingredient : ingredients) {
-//                    ps.setInt(paramIndex++, ingredient.getId());
-//                }
-//            }
-//            ps.executeUpdate();
-//        }
-//    }
-
-//    private void attachIngredients(Connection conn, Integer dishId, List<DishIngredient> ingredientsToSave)
-//            throws SQLException {
-//
-//        if (ingredientsToSave == null || ingredientsToSave.isEmpty()) {
-//            return;
-//        }
-//
-//        List<Ingredient> ingredientsListFromDB = findIngredients(null, null);
-//        List<Ingredient> newIngredientsToSave = new ArrayList<>();
-//
-//        List<Ingredient> ingredients = ingredientsToSave
-//                .stream()
-//                .map(DishIngredient::getIngredient)
-//                .toList();
-//
-//        ingredients
-//                .forEach(ingredient -> {
-//                    if (!ingredientsListFromDB.contains(ingredient)) {
-//                        newIngredientsToSave.add(ingredient);
-//                    }
-//                });
-//
-//        if (!newIngredientsToSave.isEmpty()) {
-//            createIngredients(newIngredientsToSave);
-//        }
-//
-//        if (newIngredientsToSave.size() < ingredientsToSave.size()) {
-//            insertDishIngredient(dishId, ingredientsToSave, conn);
-//            updateDishIngredient(dishId, ingredientsToSave, conn);
-//        }
-//    }
-
-//    private void insertDishIngredient(Integer dishId, List<DishIngredient> newIngredientsToSave, Connection conn)
-//            throws SQLException {
-//
-//        String insertSql = """
-//                INSERT INTO dish_ingredient (id, id_dish, id_ingredient, quantity_required, unit)
-//                values (?, ?, ?, ?, ?::unit_type)
-//                on conflict (id_dish, id_ingredient) do nothing;""";
-//
-//        try (PreparedStatement ps = conn.prepareStatement(insertSql)) {
-//
-//            for (DishIngredient ingredient : newIngredientsToSave) {
-//                ps.setInt(1, next_id("dish_ingredient"));
-//                ps.setInt(2, dishId);
-//                ps.setInt(3, ingredient.getIngredient().getId());
-//
-//                if (ingredient.getQuantityRequired() != null) {
-//                    ps.setDouble(4, ingredient.getQuantityRequired());
-//                } else {
-//                    ps.setNull(4, Types.DOUBLE);
-//                }
-//
-//                ps.setString(5, ingredient.getUnit().name());
-//                ps.addBatch();
-//            }
-//            ps.executeBatch();
-//        }
-//    }
-
-//    private void updateDishIngredient(Integer dishId, List<DishIngredient> ingredientsToSave, Connection conn)
-//            throws SQLException {
-//
-//        if (ingredientsToSave == null || ingredientsToSave.isEmpty()) {
-//            return;
-//        }
-//
-//        String upsert = """
-//                UPDATE dish_ingredient
-//                SET quantity_required = ?,
-//                    unit = ?::unit_type
-//                WHERE id_dish = ? and id_ingredient = ?;""";
-//
-//        try (PreparedStatement ps = conn.prepareStatement(upsert)) {
-//            for (DishIngredient ingredient : ingredientsToSave) {
-//                if (ingredient.getQuantityRequired() != null) {
-//                    ps.setDouble(1, ingredient.getQuantityRequired());
-//                } else {
-//                    ps.setNull(1, Types.DOUBLE);
-//                }
-//                ps.setString(2, ingredient.getUnit().name());
-//                ps.setInt(3, dishId);
-//                ps.setInt(4, ingredient.getId());
-//
-//                ps.addBatch();
-//            }
-//            ps.executeBatch();
-//        }
-//    }
-
-//    protected void resetData() {
-//        String deleteIngredient = "DELETE FROM ingredient;";
-//        String deleteDish = "DELETE FROM dish;";
-//
-//        String resetSequenceDish = "ALTER SEQUENCE dish_id_seq RESTART WITH 1;";
-//        String resetSequenceIngredient = "ALTER SEQUENCE ingredient_id_seq RESTART WITH 1;";
-//
-//        String initialDish = """
-//                insert into dish (id, name, dish_type, selling_price)
-//                VALUES (1, 'Salade fraîche', 'STARTER', 3500.00),
-//                       (2, 'Poulet grillé', 'MAIN', 12000.00),
-//                       (3, 'Riz au légume', 'MAIN', null),
-//                       (4, 'Gâteau aux chocolat', 'DESSERT', 8000.00),
-//                       (5, 'Salade de fruits', 'DESSERT', null);
-//                """;
-//
-//        String initialIngredient = """
-//                INSERT INTO ingredient (id, name, price, category)
-//                VALUES (1, 'Laitue', 800.00, 'VEGETABLE'),
-//                       (2, 'Tomate', 600.00, 'VEGETABLE'),
-//                       (3, 'Poulet', 4500.00, 'ANIMAL'),
-//                       (4, 'Chocolat', 3000.00, 'OTHER'),
-//                       (5, 'Beurre', 2500.00, 'DAIRY');
-//                """;
-//        Connection conn = dbConnection.getDBConnection();
-//
-//        try {
-//            conn.setAutoCommit(false);
-//            Statement stmt = conn.createStatement();
-//            stmt.executeUpdate(deleteIngredient);
-//            stmt.executeUpdate(deleteDish);
-//
-//            stmt.executeUpdate(resetSequenceDish);
-//            stmt.executeUpdate(resetSequenceIngredient);
-//
-//            stmt.executeUpdate(initialDish);
-//            stmt.executeUpdate(initialIngredient);
-//
-//            conn.commit();
-//
-//        } catch (SQLException e) {
-//            try {
-//                conn.rollback();
-//                throw new RuntimeException("Erreur lors de la réinitialisation des données", e);
-//            } catch (SQLException ex) {
-//                throw new RuntimeException(ex);
-//            }
-//        } finally {
-//            try {
-//                conn.setAutoCommit(true);
-//            } catch (SQLException _) {
-//            }
-//            dbConnection.closeDBConnection(conn);
-//        }
-//    }
-
-    private Integer next_id(String table) {
-        Connection conn = dbConnection.getDBConnection();
-        try {
-            Statement stm = conn.createStatement();
-            ResultSet rs = stm.executeQuery("""
-                    SELECT COALESCE(MAX(id), 0) + 1 FROM %s""".formatted(table));
-
-            return rs.next() ? rs.getInt(1) : 1;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        } finally {
-            dbConnection.closeDBConnection(conn);
-        }
-    }
-
-    private Dish getDishFromDb(ResultSet rs, List<DishIngredient> dishIngredients) throws SQLException {
-        return new Dish(
-                rs.getInt("id_dish"),
-                rs.getString("dish_name"),
-                DishTypeEnum.valueOf(rs.getString("dish_type")),
-                getNullableDouble(rs, "selling_price"),
-                dishIngredients
-        );
-    }
-
-    private DishIngredient getDishIngredientFromDb(ResultSet rs, Dish dish) throws SQLException {
-        return new DishIngredient(
-                rs.getInt("id"),
-                dish,
-                getIngredientFromDB(rs),
-                getNullableDouble(rs, "quantity_required"),
-                UnitType.valueOf(rs.getString("unit"))
-        );
-    }
-
-    private Double getNullableDouble(ResultSet rs, String column) throws SQLException {
-        return rs.getObject(column) == null ? null : rs.getDouble(column);
-    }
-
-    private void buildIngredientStatement(Ingredient ingredient, PreparedStatement preparedStatement)
-            throws SQLException {
-        preparedStatement.setInt(1, ingredient.getId());
-        preparedStatement.setString(2, ingredient.getName());
-        preparedStatement.setDouble(3, ingredient.getPrice());
-        preparedStatement.setString(4, ingredient.getCategory().toString());
-    }
-
-    private void manageDishIngredients(Connection conn, Integer dishId, List<DishIngredient> dishIngredients)
-            throws SQLException {
-
-        if (dishIngredients == null || dishIngredients.isEmpty()) {
-            deleteAllDishIngredients(conn, dishId);
-            return;
-        }
-
-        List<Ingredient> existingIngredients = findIngredients(null, null);
-        List<Ingredient> newIngredients = new ArrayList<>();
-        Map<Integer, DishIngredient> ingredientsToKeep = new HashMap<>();
-
-        for (DishIngredient di : dishIngredients) {
-            Ingredient ingredient = di.getIngredient();
-
-            if (!existingIngredients.contains(ingredient)) {
-                newIngredients.add(ingredient);
-            }
-            ingredientsToKeep.put(ingredient.getId(), di);
-        }
-
-        if (!newIngredients.isEmpty()) {
-            createNewIngredients(conn, newIngredients);
-        }
-
-        deleteRemovedIngredients(conn, dishId, ingredientsToKeep.keySet());
-        upsertDishIngredients(conn, dishId, dishIngredients);
-    }
-
-    private void deleteAllDishIngredients(Connection conn, Integer dishId) throws SQLException {
-        String deleteSql = "DELETE FROM dish_ingredient WHERE id_dish = ?";
-        try (PreparedStatement ps = conn.prepareStatement(deleteSql)) {
-            ps.setInt(1, dishId);
-            ps.executeUpdate();
-        }
-    }
-
-    private void deleteRemovedIngredients(Connection conn, Integer dishId, Set<Integer> ingredientIdsToKeep)
-            throws SQLException {
-
-        StringBuilder deleteSql = new StringBuilder("DELETE FROM dish_ingredient WHERE id_dish = ?");
-
-        if (!ingredientIdsToKeep.isEmpty()) {
-            String placeholders = ingredientIdsToKeep.stream()
-                    .map(x -> "?")
-                    .collect(Collectors.joining(","));
-            deleteSql.append(" AND id_ingredient NOT IN (").append(placeholders).append(")");
-        }
-
-        try (PreparedStatement ps = conn.prepareStatement(deleteSql.toString())) {
-            ps.setInt(1, dishId);
-
-            int paramIndex = 2;
-            for (Integer id : ingredientIdsToKeep) {
-                ps.setInt(paramIndex++, id);
-            }
-
-            ps.executeUpdate();
-        }
-    }
-
-    private void createNewIngredients(Connection conn, List<Ingredient> newIngredients) throws SQLException {
-        if (newIngredients == null || newIngredients.isEmpty()) {
-            return;
-        }
-
-        String insertSql = """
+    private Ingredient saveIngredientInternal(Connection conn, Ingredient ingredient) throws SQLException {
+        String sql = """
                 INSERT INTO ingredient (id, name, price, category)
                 VALUES (?, ?, ?, ?::ingredient_category)
-                ON CONFLICT (id) DO NOTHING""";
+                ON CONFLICT (id) DO UPDATE SET
+                    name = EXCLUDED.name,
+                    price = EXCLUDED.price,
+                    category = EXCLUDED.category::ingredient_category
+                RETURNING id, name, price, category""";
 
-        try (PreparedStatement ps = conn.prepareStatement(insertSql)) {
-            for (Ingredient ingredient : newIngredients) {
-                ps.setInt(1, ingredient.getId());
-                ps.setString(2, ingredient.getName());
-                ps.setDouble(3, ingredient.getPrice());
-                ps.setString(4, ingredient.getCategory().name());
-                ps.addBatch();
+        try (PreparedStatement ps = conn.prepareStatement(sql)) {
+            Integer ingredientId = ingredient.getId();
+            if (ingredientId == null || ingredientId <= 0) {
+                ingredientId = nextId(conn, "ingredient");
             }
-            ps.executeBatch();
+
+            ps.setInt(1, ingredientId);
+            ps.setString(2, ingredient.getName());
+            ps.setDouble(3, ingredient.getPrice());
+            ps.setString(4, ingredient.getCategory().name());
+
+            try (ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) {
+                    return new Ingredient(
+                            rs.getInt("id"),
+                            rs.getString("name"),
+                            rs.getDouble("price"),
+                            CategoryEnum.valueOf(rs.getString("category"))
+                    );
+                } else {
+                    throw new SQLException("Failed to save ingredient");
+                }
+            }
         }
     }
 
-    private void upsertDishIngredients(Connection conn, Integer dishId, List<DishIngredient> dishIngredients)
+    private void saveStockMovements(Connection conn, Integer ingredientId, List<StockMovement> stockMovements)
             throws SQLException {
-
-        String upsertSql = """
-                INSERT INTO dish_ingredient (id, id_dish, id_ingredient, quantity_required, unit)
-                VALUES (?, ?, ?, ?, ?::unit_type)
-                ON CONFLICT (id_dish, id_ingredient) DO UPDATE
-                SET quantity_required = EXCLUDED.quantity_required,
-                    unit = EXCLUDED.unit""";
-
-        try (PreparedStatement ps = conn.prepareStatement(upsertSql)) {
-            int nextId = next_id("dish_ingredient");
-
-            for (DishIngredient di : dishIngredients) {
-                ps.setInt(1, nextId++);
-                ps.setInt(2, dishId);
-                ps.setInt(3, di.getIngredient().getId());
-                ps.setObject(4, di.getQuantityRequired(), Types.DOUBLE);
-                ps.setString(5, di.getUnit().name());
-                ps.addBatch();
-            }
-            ps.executeBatch();
-        }
-    }
-
-    private void addStockMovements(Connection conn, Integer ingredientId, List<StockMovement> stockMovements)
-            throws SQLException {
-
         if (stockMovements == null || stockMovements.isEmpty()) {
             return;
         }
 
-        String insertMovementSql = """
+        String sql = """
                 INSERT INTO stock_movement (id, id_ingredient, quantity, unit, type, creation_datetime)
-                VALUES (?, ?, ?, ?::unit_type, ?::movement_type, ?)
-                ON CONFLICT (id) DO nothing""";
+                VALUES (?, ?, ?, ?::unit_type, ?::movement_type, ?)""";
 
-        try (PreparedStatement ps = conn.prepareStatement(insertMovementSql)) {
-            for (StockMovement stock : stockMovements) {
-                if (stock.getId() == null) {
-                    ps.setInt(1, next_id("stock_movement"));
-                } else {
-                    ps.setInt(1, stock.getId());
-                }
+        try (PreparedStatement ps = conn.prepareStatement(sql)) {
+            int nextId = nextId(conn, "stock_movement");
 
+            for (StockMovement movement : stockMovements) {
+                ps.setInt(1, nextId++);
                 ps.setInt(2, ingredientId);
-
-                if (stock.getValue() != null && stock.getValue().getQuantity() != null) {
-                    ps.setDouble(3, stock.getValue().getQuantity());
-                } else {
-                    ps.setNull(3, Types.DOUBLE);
-                }
-                if (stock.getValue().getUnit() != null) {
-                    ps.setString(4, stock.getValue().getUnit().name());
-                } else {
-                    ps.setString(4, UnitType.KG.name());
-                }
-
-                ps.setString(5, stock.getType().name());
-
-                Timestamp timestamp = stock.getCreationDatetime() != null
-                        ? Timestamp.from(stock.getCreationDatetime())
-                        : Timestamp.from(Instant.now());
-                ps.setTimestamp(6, timestamp);
-                ps.executeUpdate();
+                ps.setDouble(3, movement.getValue().getQuantity());
+                ps.setString(4, movement.getValue().getUnit().name());
+                ps.setString(5, movement.getType().name());
+                ps.setTimestamp(6, Timestamp.from(movement.getCreationDatetime()));
+                ps.addBatch();
             }
+            ps.executeBatch();
         }
     }
 
     public List<StockMovement> getIngredientStockMovements(Integer ingredientId) {
-        if (ingredientId == null) {
-            throw new IllegalArgumentException("ingredientId cannot be null");
+        if (ingredientId == null || ingredientId <= 0) {
+            throw new IllegalArgumentException("Ingredient ID must be positive");
         }
 
         String sql = """
-                SELECT id, quantity, type, unit, creation_datetime
+                SELECT id, quantity, unit, type, creation_datetime
                 FROM stock_movement
                 WHERE id_ingredient = ?
                 ORDER BY creation_datetime""";
@@ -887,26 +705,122 @@ public class DataRetriever {
         try {
             PreparedStatement ps = conn.prepareStatement(sql);
             ps.setInt(1, ingredientId);
-
-            List<StockMovement> stock = new ArrayList<>();
             ResultSet rs = ps.executeQuery();
+
+            List<StockMovement> movements = new ArrayList<>();
             while (rs.next()) {
-                StockMovement movement = new StockMovement(
-                        rs.getInt("id"),
-                        new StockValue(
-                                rs.getDouble("quantity"),
-                                UnitType.valueOf(rs.getString("unit"))
-                        ),
-                        MouvementTypeEnum.valueOf(rs.getString("type")),
-                        rs.getTimestamp("creation_datetime").toInstant()
-                );
-                stock.add(movement);
+                movements.add(extractStockMovementFromResultSet(rs));
             }
-            return stock;
+
+            return movements;
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("Error getting ingredient stock movements", e);
         } finally {
             dbConnection.closeDBConnection(conn);
+        }
+    }
+
+    private Ingredient findIngredientById(Integer ingredientId) {
+        if (ingredientId == null || ingredientId <= 0) {
+            throw new IllegalArgumentException("Ingredient ID must be positive");
+        }
+
+        String sql = """
+                SELECT id, name, price, category
+                FROM ingredient
+                WHERE id = ?""";
+
+        Connection conn = dbConnection.getDBConnection();
+        try {
+            PreparedStatement ps = conn.prepareStatement(sql);
+            ps.setInt(1, ingredientId);
+            ResultSet rs = ps.executeQuery();
+
+            if (rs.next()) {
+                return extractIngredientFromResultSet(rs);
+            } else {
+                throw new RuntimeException("Ingredient not found with id: " + ingredientId);
+            }
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding ingredient by id", e);
+        } finally {
+            dbConnection.closeDBConnection(conn);
+        }
+    }
+
+    private Dish extractDishFromResultSet(ResultSet rs) throws SQLException {
+        return new Dish(
+                rs.getInt("id_dish"),
+                rs.getString("dish_name"),
+                DishTypeEnum.valueOf(rs.getString("dish_type")),
+                rs.getDouble("selling_price"),
+                null  // Ingredients are loaded separately
+        );
+    }
+
+    private DishIngredient extractDishIngredientFromResultSet(ResultSet rs, Dish dish) throws SQLException {
+        Ingredient ingredient = new Ingredient(
+                rs.getInt("id_ingredient"),
+                rs.getString("ingredient_name"),
+                rs.getDouble("price"),
+                CategoryEnum.valueOf(rs.getString("category"))
+        );
+
+        return new DishIngredient(
+                rs.getInt("id"),
+                dish,
+                ingredient,
+                rs.getDouble("quantity_required"),
+                UnitType.valueOf(rs.getString("unit"))
+        );
+    }
+
+    private Ingredient extractIngredientFromResultSet(ResultSet rs) throws SQLException {
+        Integer ingredientId = rs.getInt("id_ingredient");
+        List<StockMovement> stockMovements = getIngredientStockMovements(ingredientId);
+
+        return new Ingredient(
+                ingredientId,
+                rs.getString("ingredient_name"),
+                rs.getDouble("price"),
+                CategoryEnum.valueOf(rs.getString("category")),
+                stockMovements
+        );
+    }
+
+    private StockMovement extractStockMovementFromResultSet(ResultSet rs) throws SQLException {
+        return new StockMovement(
+                rs.getInt("id"),
+                new StockValue(
+                        rs.getDouble("quantity"),
+                        UnitType.valueOf(rs.getString("unit"))
+                ),
+                MovementTypeEnum.valueOf(rs.getString("type")),
+                rs.getTimestamp("creation_datetime").toInstant()
+        );
+    }
+
+    private int nextId(Connection conn, String tableName) throws SQLException {
+        String sql = String.format("SELECT COALESCE(MAX(id), 0) + 1 FROM \"%s\"", tableName);
+
+        try (Statement stmt = conn.createStatement();
+             ResultSet rs = stmt.executeQuery(sql)) {
+            if (rs.next()) {
+                return rs.getInt(1);
+            }
+            return 1;
+        }
+    }
+
+    private String generateOrderReference(Connection conn) throws SQLException {
+        String sql = "SELECT COALESCE(MAX(CAST(reference AS INTEGER)), 0) + 1 FROM \"order\"";
+
+        try (Statement stmt = conn.createStatement();
+             ResultSet rs = stmt.executeQuery(sql)) {
+            if (rs.next()) {
+                return String.format("%06d", rs.getInt(1));
+            }
+            return "000001";
         }
     }
 }
